[package]
name = "yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
web-sys = {version="0.3.60", features = ["HtmlInputElement"]}
wasm-bindgen = "0.2"
gloo = "0.8.0"
yew-router = "0.16.0"
reqwest = {version="0.11.12",features=["json","blocking"]}
scraper = "0.13.0"
tokio = {version= "1", features = ["full"]}
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.33"
tokio-test = "0.4.2"